# snakemake-storage-plugin-nersc

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release-please.yml
src/snakemake_storage_plugin_nersc/: __init__.py
tests/: test_plugin.py
