[project]
dependencies = [
  "snakemake-interface-common>=1.22.0,<2",
  "snakemake-interface-storage-plugins>=4.3.2,<5",
]
name = "snakemake-storage-plugin-nersc"
requires-python = ">=3.11,<4.0"
version = "0.1.0"
[[project.authors]]
name = "Luigi Pertoldi"
email = "luigi.pertoldi@protonmail.com"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = ["ruff", "coverage", "pytest", "twine", "build", "pytest-cov"]

[project.urls]
Repository = "https://github.com/legend-exp/snakemake-storage-plugin-nersc"
Documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/storage/nersc.html"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = "3.12.*"

[tool.pixi.pypi-dependencies.snakemake_storage_plugin_nersc]
path = "."
editable = true

[tool.pixi.environments.dev]
features = ["dev"]

[tool.pixi.feature.dev.tasks]
lint = "ruff check"
format = "ruff format"
test = "pytest --cov=snakemake-storage-plugin-nersc --cov-report=xml:coverage-report/coverage.xml --cov-report=term-missing"
build = "python -m build"
check-build = { cmd = "python -m twine check dist/*", depends-on = ["build"] }

[tool.ruff]
exclude = ["build", "dist", ".pixi"]
